@@ -7,6 +7,7 @@
 
 package org.gridsuite.monitor.worker.server.services;
 
+import org.apache.commons.collections4.CollectionUtils;
 import org.gridsuite.modification.dto.ModificationInfos;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.web.client.RestTemplateBuilder;
@@ -14,7 +15,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
@@ -37,20 +37,17 @@ public class NetworkModificationRestService {
     }
 
     public List<ModificationInfos> getModifications(List<UUID> modificationsUuids) {
-        List<ModificationInfos> modifications = new ArrayList<>();
-
-        UriComponentsBuilder uriBuilder = UriComponentsBuilder
-            .fromUriString(DELIMITER + NETWORK_MODIFICATION_SERVER_API_VERSION + DELIMITER +
-                "network-composite-modification" + DELIMITER + "{uuid}" + DELIMITER + "network-modifications?onlyMetadata=false");
-
-        modificationsUuids.forEach(uuid -> {
-            String path = this.networkModificationServerBaseUri + uriBuilder.buildAndExpand(uuid).toUriString();
+        if (CollectionUtils.isNotEmpty(modificationsUuids)) {
+            String path = this.networkModificationServerBaseUri + UriComponentsBuilder.fromPath(DELIMITER + NETWORK_MODIFICATION_SERVER_API_VERSION + DELIMITER +
+                    "network-composite-modifications" + DELIMITER + "network-modifications")
+                .queryParam("uuids", modificationsUuids.toArray())
+                .queryParam("onlyMetadata", "false")
+                .buildAndExpand()
+                .toUriString();
             ModificationInfos[] modificationInfos = networkModificationServerRest.getForObject(path, ModificationInfos[].class);
-            if (modificationInfos != null) {
-                modifications.addAll(Arrays.asList(modificationInfos));
-            }
-        });
-
-        return modifications;
+            return modificationInfos != null ? Arrays.asList(modificationInfos) : List.of();
+        } else {
+            return List.of();
+        }
     }
 }
